<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/delete_action"
        android:title="@string/delete_action_label"
        android:icon="@drawable/ic_delete_white_36dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/done_action"
        android:title="@string/done_action_label"
        android:icon="@drawable/ic_check_white_36dp"
        app:showAsAction="ifRoom" />
</menu>