<resources>
    <string name="app_name">ComputerDatabaseAndroid</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="wrong_sign_in">Erreur d\'authentification</string>
    <string name="title_computer_list">Computers</string>
    <string name="title_computer_detail">Computer Detail</string>
    <string name="computer_name_label">Nom de l\'ordinateur</string>
    <string name="computer_introduced_date_label">Date de mise en marché</string>
    <string name="computer_discontinued_date_label">Date de fin en marché</string>
    <string name="delete_action_label">Supprimer</string>
    <string name="done_action_label">Fin</string>
    <string name="computer_company_label">Compagnie</string>
    <string name="computer_created_label">Ordinateur bien crée</string>
    <string name="no_internet_label">Vous n\'êtes pas connecté à Internet</string>
</resources>
